# Spotify-API-Music-Recommendation-Using-LSTM

./: Package  README.md  pom.xml  project xmlns=httpmaven.apache.orgP 2.txt  python-app.yml  requirements.txt
.github/workflows/: Spotify API.ipynb  codeql.yml  pyproject.toml  python-app.yml  python-app.yml.toml  setuptools and wheel.yml
