[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Spotify-API-Music-Recommendation-Using-LSTM"
version = "0.1.0"
description = "This project is based on Deep learning ..."
authors = [{name = "Spotify API Music Recommendation Using LSTM ", email = "dinishajain4@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "flask==2.2.5",
    "requests==2.32.2",
    "numpy==1.22.0",
    "pandas==1.3.3",
    "scikit-learn==1.5.1"
]

[tool.setuptools.packages.find]
where = ["src"]
